<resources>
    <string name="app_name">FreeSpot</string>
    <string name="main_activity_text_title">Welcome to Free Spot!</string>
    <string name="main_activity_button_set_size">Select parking spaces</string>
    <string name="main_activity_toast_set_parking_lots">%1$s free spots.</string>
    <string name="main_activity_button_make_reservation">Make a reservation</string>
    <string name="dialog_fragment_toast_invalid_value">please insert a valid number</string>
    <string name="dialog_fragment_confirm_button">Confirm</string>
    <string name="dialog_fragment_title_text">Set spaces available:</string>
    <string name="reservation_activity_text_title">Your reservation</string>
    <string name="reservation_activity_text_from_date">from</string>
    <string name="reservation_activity_entry_hint">Select entry date</string>
    <string name="reservation_activity_text_to_date">to</string>
    <string name="reservation_activity_exit_hint">Select exit date</string>
    <string name="reservation_activity_parking_number_hint">Insert parking number</string>
    <string name="reservation_activity_parking_code_hint">Insert your key code</string>
    <string name="reservation_activity_button_save_text">Save</string>
    <string name="dialog_fragment_date_picker_text_cancel">Cancel</string>
    <string name="dialog_fragment_date_picker_text_confirm">Confirm</string>
    <string name="reservation_activity_text_confirmation_message">Your reservation has been confirmed successfully!</string>
    <string name="reservation_activity_text_entry_error_message">Please select an entry date!</string>
    <string name="reservation_activity_text_exit_error_message">Please select an exit date!</string>
    <string name="reservation_activity_text_parking_lot_error_message">Please insert a valid parking lot!</string>
    <string name="reservation_activity_text_key_code_error_message">Please insert a valid key code!</string>
    <string name="reservation_activity_text_overlapping_error_message">This reservation is overlapping with another one!</string>
    <string name="delete_out_dated_reservations">Delete out-dated reservations</string>
    <string name="main_activity_toast_delete_old_reservations">Old reservations deleted!</string>
    <string name="reservation_activity_delete_old_reservations">Old reservations deleted!</string>
</resources>
